# SolanaAgentMarkeplace-DenovaHackathon

./: .gitignore  README.md
.github/workflows/: build-solana.yml
deploy-agents/mip003-agent-server/: .env.example  .gitignore  Dockerfile  requirements.txt
layer2agents/: .firebaserc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json
layer2agents/.firebase/: hosting.b3V0.cache
layer2agents/.firebase/layer2agents/functions/: .env.example  package-lock.json  package.json  server.js
layer2agents/contracts/: Anchor.toml  README.md
layer2agents/server/: README.md
layer2agents/server/mip003-agent-server/: README.md  agent_templates.py  main.py
layer2agents/src/app/: globals.css  layout.tsx  page.tsx
layer2agents/src/components/: agent-card.tsx  hire-dialog.tsx  hire-modal.tsx  job-card.tsx  navbar-wrapper.tsx  navbar.tsx  wallet-button.tsx
layer2agents/src/lib/: agents-registry.ts  hired-agents-store.ts  hybrid-registry.ts  mip003-client.ts  onchain-registry.ts  solana.ts  store.ts  use-agents.ts
onchain-registry/: BUILD_GUIDE.md  Dockerfile.build  build.ps1  export-for-playground.js  lib-rs-for-playground.txt  package-lock.json  playground-export.json  register-agent.js  update-program-id.js
onchain-registry/programs/agent-registry/: Cargo.toml
onchain-registry/programs/agent-registry/src/: lib.rs
onchain-registry/sdk/: package-lock.json  package.json  tsconfig.json
onchain-registry/sdk/src/: .local-wallet.json  deploy.ts  index.ts  portal.ts  register-agent-cli.ts
(+45 files in other folders)
